gcc/testsuite/g++.old-deja/g++.jason/scoping16.C
// { dg-do assemble  }
struct A {
  int a();			// { dg-message "" }
  int a;			// { dg-error "" } 
};
